--- a/section.css
+++ b/section.css
@@ -20,7 +20,7 @@ body {
 .bg-tile {
   position: fixed;
   inset: 0;
-  background: url("../mord-bg.gif") repeat;
+  background: url("../images/mord-bg.gif") repeat;
   background-size: 260px 260px;
   opacity: 0.9;
   z-index: -1;
